--- a/app/login.html
+++ b/app/login.html
@@ -24,7 +24,7 @@
    <div class="main-content">
       	<section class="content-box">
       	<div class="header">
-        <div class="head-text">Авторизируйтесь</div>
+        <h2 class="head-text">Авторизируйтесь</h2>
         <div class="head-foot"></div>
       	</div>
       	<div class="auth-box">
