--- a/app/works.html
+++ b/app/works.html
@@ -89,44 +89,51 @@
       	 <div class="content-box-body box-body-m clearfix">
       	 	<ul class="workslist">
       	 		<li class="work-item">
-             <div class="work-wrapper"> <a href="http://www.site.ru" class="work-links">
-      	 			<div class="work-box"><img src="image/work1.png" height="127" width="181" alt="work1" class="works"></div>
-              </div><a>
+             <div class="work-wrapper">
+      	 			<div class="work-box"><img src="image/work1.png" height="127" width="181" alt="work1" class="works" id="work1"></div>
+              <div class="work-link"><a href="#" class="work-text">название</a></div>
+              </div>
               <div class="about-work">
               <a href="http://www.site.ru" class="site-link"><span class="site-address">www.site.ru</span></a>
               <span class="about-site">Информация о проекте 1 превью 2 строки....</span>
               </div>
       	 		</li>
       	 		<li class="work-item">
-            <div class="work-wrapper">  <a href="http://www.site.ru" class="work-links">
+            <div class="work-wrapper"> 
       	 			<div class="work-box"><img src="image/work2.png" height="127" width="181" alt="work2" class="works"></div>
-              </div></a>
+              <div class="work-link"><a href="#" class="work-text">название</a></div>
+              </div>
               <div class="about-work">
               <a href="http://www.site.ru" class="site-link"><span class="site-address">www.site.ru</span></a>
               <span class="about-site">Информация о проекте 2 превью 2 строки....</span>
               </div>
       	 		</li>
       	 		<li class="work-item"> 
-            <div class="work-wrapper">  <a href="http://www.site.ru" class="work-links">
+            <div class="work-wrapper">  
       	 			<div class="work-box"><img src="image/work3.png" height="127" width="181" alt="work3" class="works"></div>
-              </div></a>
+              <div class="work-link"><a href="#" class="work-text">название</a></div>
+              </div>
               <div class="about-work">
               <a href="http://www.site.ru" class="site-link"><span class="site-address">www.site.ru</span></a>
               <span class="about-site">Информация о проекте 3 превью 2 строки....</span>
               </div>
       	 		</li>
       	 		<li class="work-item">
-           <div class="work-wrapper">  <a href="http://www.site.ru" class="work-links">
+           <div class="work-wrapper">  
       	 			<div class="work-box"><img src="image/work4.png" height="127" width="181" alt="work4" class="works"></div>
-              </div></a>
+              <div class="work-link"><a href="#" class="work-text">название</a></div>
+              </div>
               <div class="about-work">
               <a href="http://www.site.ru" class="site-link"><span class="site-address">www.site.ru</span></a>
               <span class="about-site">Информация о проекте 4 превью 2 строки....</span>
               </div>
       	 		</li>
       	 		<li class="work-item add-item">
-           <div class="work-add-wrapper">  <a href="#" class="work-add-link">
-      	 			<div class="work-add"><img src="image/add-new.png" height="129" width="182" alt="add-new" class="works"></div>
+           <a href="#" class="work-add-link"><div class="work-add-wrapper"> 
+      	 			<div class="work-add">
+              <img src="image/add-pic.png" height="32" width="32" alt="add-new" class="works-add">
+              <span class="works-add-text">Добавить проект</span>
+              </div>
               </div></a>
       	 		</li>
       	 	</ul>
@@ -142,14 +149,14 @@
 
    <div class="footer">
 	<div class="foot-container">
-		<div class="lock">
-			<a href="login.html" class="lock-link sprite sprite-lock"></a>
-		</div>
+			<a href="login.html" class="lock-link"><div class="lock"></div></a>
 		<div class="copyright"><span class="copyright-text">© 2015. Это мой сайт, пожалуйста, не копируйте и не воруйте его</span></div>
 	</div>
 </div>   
 
        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="bower/jquery/dist/jquery.js"><\/script>')</script>	 
+        <script src="js/jquery.simplemodal-1.4.4.js"></script>
+        <script src="js/main.js"></script>
 </body>
 </html>
