--- a/app/support.html
+++ b/app/support.html
@@ -98,7 +98,9 @@
              <input type="email" class="email-input" id="email">
              <label for="msg" class="msg-label">Сообщение</label>
              <textarea id="msg" cols="30" rows="10" class="msg-text"></textarea>
-
+             <div class="g-recaptcha" id="recaptcha" data-sitekey="6LdzJQgTAAAAAKrfvylxt8q1vM-xVdgH7eEn09Jk">Введите код, указанный на картинке</div>
+             <input type="submit" class="form-submit">
+             <button type="reset" class="reset-btn">Очистить</button>
            </form>
          </div>  
       	</section>
@@ -111,14 +113,13 @@
 
    <div class="footer">
 	<div class="foot-container">
-		<div class="lock">
-			<a href="login.html" class="lock-link sprite sprite-lock"></a>
-		</div>
+		<a href="login.html" class="lock-link"><div class="lock"></div></a>
 		<div class="copyright"><span class="copyright-text">© 2015. Это мой сайт, пожалуйста, не копируйте и не воруйте его</span></div>
 	</div>
 </div>   
 
        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="bower/jquery/dist/jquery.js"><\/script>')</script>	 
+        <script src='https://www.google.com/recaptcha/api.js'></script>
 </body>
 </html>
