some last fixes in css files

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,8 @@
 <title>Портфолио</title>	
 <link rel="stylesheet" type="text/css" href="bower/normalize.css/normalize.css">
 <link rel="stylesheet" type="text/css" href="fonts/fira/fira.css">
+<link rel="icon" href="/image/favicon.ico" type="image/x-icon" /> 
+<link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon" />
 <link rel="stylesheet" type="text/css" href="css/main.css">
 <script src="bower/modernizr/modernizr.js"></script>
 </head>	
@@ -134,7 +136,7 @@
       					<div class="where">Фрилансер</div>
       					<div class="when">2015 — по настоящее время</div>
       				</li>
-              <li class="work clearfix">
+              <li class="work work2 clearfix">
                 <div class="where">Фрилансер</div>
                 <div class="when">2015 — по настоящее время</div>
               </li>
@@ -169,9 +171,9 @@
 
 <div class="footer">
 	<div class="foot-container">
-		<div class="lock">
-			<a href="login.html" class="lock-link sprite sprite-lock"></a>
-		</div>
+		
+			<a href="login.html" class="lock-link"><div class="lock"></div></a>
+		
 		<div class="copyright"><span class="copyright-text">© 2015. Это мой сайт, пожалуйста, не копируйте и не воруйте его</span></div>
 	</div>
 </div>
