--- a/app/login.html
+++ b/app/login.html
@@ -11,6 +11,8 @@
 	<title>Login</title>
 	<link rel="stylesheet" type="text/css" href="bower/normalize.css/normalize.css">
 <link rel="stylesheet" type="text/css" href="fonts/fira/fira.css">
+<link rel="icon" href="/image/favicon.ico" type="image/x-icon" /> 
+<link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon" />
 <link rel="stylesheet" type="text/css" href="css/login.css">
 <script src="bower/modernizr/modernizr.js"></script>
 </head>
@@ -30,9 +32,9 @@
       	<div class="auth-box">
       		<form action="" class="auth-from">
       			<label for="login" class="login-label">Логин</label>
-      			<input id="login" type="text" class="login-input">
+      			<input id="login" type="text" placeholder="Введите логин" class="login-input">
       			<label for="pasw" class="psw-label">Пароль</label>
-      			<input id="pasw" type="text" class="psw-input">
+      			<input id="pasw" type="text" placeholder="Введите пароль" class="psw-input">
       			<input type="submit" value="Войти" class="submit-btn">
       		</form>
       	</div>
