--- a/app/support.html
+++ b/app/support.html
@@ -11,6 +11,8 @@
 <title>Мои работы</title>	
 <link rel="stylesheet" type="text/css" href="bower/normalize.css/normalize.css">
 <link rel="stylesheet" type="text/css" href="fonts/fira/fira.css">
+<link rel="icon" href="/image/favicon.ico" type="image/x-icon" /> 
+<link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon" />
 <link rel="stylesheet" type="text/css" href="css/support.css">
 <script src="bower/modernizr/modernizr.js"></script>
 </head>
@@ -93,11 +95,11 @@
          <div class="support-box">
            <form action="" class="support-form">
              <label for="name" class="name-label">Имя</label>
-             <input type="text" class="name-input" id="name">
+             <input type="text" class="name-input" id="name" placeholder="Как к Вам обращаться">
              <label for="email" class="email-label">Email</label>
-             <input type="email" class="email-input" id="email">
+             <input type="email" class="email-input" id="email" placeholder="Куда мне писать">
              <label for="msg" class="msg-label">Сообщение</label>
-             <textarea id="msg" cols="30" rows="10" class="msg-text"></textarea>
+             <textarea id="msg" cols="30" rows="10" class="msg-text" placeholder="Кратко в чем суть"></textarea>
              <div class="g-recaptcha" id="recaptcha" data-sitekey="6LdzJQgTAAAAAKrfvylxt8q1vM-xVdgH7eEn09Jk">Введите код, указанный на картинке</div>
              <input type="submit" class="form-submit">
              <button type="reset" class="reset-btn">Очистить</button>
