--- a/app/works.html
+++ b/app/works.html
@@ -11,6 +11,8 @@
 <title>Мои работы</title>	
 <link rel="stylesheet" type="text/css" href="bower/normalize.css/normalize.css">
 <link rel="stylesheet" type="text/css" href="fonts/fira/fira.css">
+<link rel="icon" href="/image/favicon.ico" type="image/x-icon" /> 
+<link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon" />
 <link rel="stylesheet" type="text/css" href="css/works.css">
 <script src="bower/modernizr/modernizr.js"></script>
 </head>
