modal-box ie8 fix

--- a/app/support.html
+++ b/app/support.html
@@ -26,7 +26,7 @@
 		<header class="header">
     <div class="page-head">
 			<div class="head-container">
-				<a href="thecoder.biz">
+				<a href="index.html">
 					<img src="image/logo.png" height="40" width="243" alt="logo" class="logo">
 				</a>
 			</div>
@@ -101,7 +101,7 @@
              <label for="msg" class="msg-label">Сообщение</label>
              <textarea id="msg" cols="30" rows="10" class="msg-text" placeholder="Кратко в чем суть"></textarea>
              <div class="g-recaptcha" id="recaptcha" data-sitekey="6LdzJQgTAAAAAKrfvylxt8q1vM-xVdgH7eEn09Jk">Введите код, указанный на картинке</div>
-             <input type="submit" class="form-submit">
+             <input type="submit" value="Отправить" class="form-submit">
              <button type="reset" class="reset-btn">Очистить</button>
            </form>
          </div>  
