--- a/app/works.html
+++ b/app/works.html
@@ -17,16 +17,12 @@
 <script src="bower/modernizr/modernizr.js"></script>
 </head>
 <body>
-	<!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
         <div class="wrapper">
 	<div class="head-main-content">
 		<header class="header">
     <div class="page-head">
 			<div class="head-container">
-				<a href="thecoder.biz">
+				<a href="index.html">
 					<img src="image/logo.png" height="40" width="243" alt="logo" class="logo">
 				</a>
 			</div>
@@ -107,7 +103,7 @@
               </div>
               <div class="about-work">
               <a href="http://www.site.ru" class="site-link"><span class="site-address">www.site.ru</span></a>
-              <span class="about-site">Информация о проекте 2 превью 2 строки....</span>
+              <div class="about-site">Информация о проекте 2 превью 2 строки....</div>
               </div>
       	 		</li>
       	 		<li class="work-item"> 
@@ -156,9 +152,8 @@
 	</div>
 </div>   
 
-       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="bower/jquery/dist/jquery.js"><\/script>')</script>	 
+       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js"></script> 
         <script src="js/jquery.simplemodal-1.4.4.js"></script>
-        <script src="js/main.js"></script>
+        <script src="js/first.js"></script>
 </body>
 </html>
