--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" type="text/css" href="fonts/fira/fira.css">
 <link rel="icon" href="/image/favicon.ico" type="image/x-icon" /> 
 <link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon" />
-<link rel="stylesheet" type="text/css" href="css/main.css">
+<link rel="stylesheet" type="text/css" href="css/index.css">
 <script src="bower/modernizr/modernizr.js"></script>
 </head>	
 <body>
@@ -25,7 +25,7 @@
 		<header class="header">
     <div class="page-head">
 			<div class="head-container">
-				<a href="thecoder.biz">
+				<a href="index.html">
 					<img src="image/logo.png" height="40" width="243" alt="logo" class="logo">
 				</a>
 			</div>
