--- a/app/login.html
+++ b/app/login.html
@@ -9,11 +9,12 @@
 	 <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Login</title>
-	<link rel="stylesheet" type="text/css" href="bower/normalize.css/normalize.css">
-<link rel="stylesheet" type="text/css" href="fonts/fira/fira.css">
+	<link rel="stylesheet" type="text/css" href="bower/normalize.css/normalize.css" />
+<link rel="stylesheet" type="text/css" href="fonts/fira/fira.css" />
 <link rel="icon" href="/image/favicon.ico" type="image/x-icon" /> 
 <link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon" />
-<link rel="stylesheet" type="text/css" href="css/login.css">
+<link rel="stylesheet" type="text/css" href="css/login.css" />
+<link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.2.1/basic/jquery.qtip.min.css" />
 <script src="bower/modernizr/modernizr.js"></script>
 </head>
 <body>
@@ -33,8 +34,8 @@
       		<form action="" class="auth-from">
       			<label for="login" class="login-label">Логин</label>
       			<input id="login" type="text" placeholder="Введите логин" class="login-input">
-      			<label for="pasw" class="psw-label">Пароль</label>
-      			<input id="pasw" type="text" placeholder="Введите пароль" class="psw-input">
+      			<label for="pswd" class="psw-label">Пароль</label>
+      			<input id="pswd" type="password" placeholder="Введите пароль" class="psw-input">
       			<input type="submit" value="Войти" class="submit-btn">
       		</form>
       	</div>
@@ -51,6 +52,8 @@
 </div>   
 
 	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="bower/jquery/dist/jquery.js"><\/script>')</script>	 
+        <script>window.jQuery || document.write('<script src="bower/jquery/dist/jquery.js"><\/script>')</script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.2.1/basic/jquery.qtip.min.js"></script>	 
+        <script src="js/second.js"></script>
 </body>
 </html>
