--- a/app/login.html
+++ b/app/login.html
@@ -13,8 +13,8 @@
 <link rel="stylesheet" type="text/css" href="fonts/fira/fira.css" />
 <link rel="icon" href="/image/favicon.ico" type="image/x-icon" /> 
 <link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon" />
+<link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/qtip2/2.2.1/jquery.qtip.min.css" />
 <link rel="stylesheet" type="text/css" href="css/login.css" />
-<link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.2.1/basic/jquery.qtip.min.css" />
 <script src="bower/modernizr/modernizr.js"></script>
 </head>
 <body>
@@ -53,7 +53,7 @@
 
 	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="bower/jquery/dist/jquery.js"><\/script>')</script>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.2.1/basic/jquery.qtip.min.js"></script>	 
-        <script src="js/second.js"></script>
+        <script src="http://cdn.jsdelivr.net/qtip2/2.2.1/jquery.qtip.min.js"></script>	 
+        <script src="js/validate-login.js"></script>
 </body>
 </html>
