--- a/app/support.html
+++ b/app/support.html
@@ -13,6 +13,7 @@
 <link rel="stylesheet" type="text/css" href="fonts/fira/fira.css">
 <link rel="icon" href="/image/favicon.ico" type="image/x-icon" /> 
 <link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon" />
+<link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/qtip2/2.2.1/jquery.qtip.min.css" />
 <link rel="stylesheet" type="text/css" href="css/support.css">
 <script src="bower/modernizr/modernizr.js"></script>
 </head>
@@ -123,5 +124,7 @@
        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="bower/jquery/dist/jquery.js"><\/script>')</script>	 
         <script src='https://www.google.com/recaptcha/api.js'></script>
+         <script src="http://cdn.jsdelivr.net/qtip2/2.2.1/jquery.qtip.min.js"></script>  
+        <script src="js/validate-support.js"></script>
 </body>
 </html>
