--- a/app/support.html
+++ b/app/support.html
@@ -94,7 +94,7 @@
            </div> 
 
          <div class="support-box">
-           <form action="" class="support-form">
+           <form action="" class="support-form" id='form'>
              <label for="name" class="name-label">Имя</label>
              <input type="text" class="name-input" id="name" placeholder="Как к Вам обращаться">
              <label for="email" class="email-label">Email</label>
@@ -122,7 +122,9 @@
 </div>   
 
        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="bower/jquery/dist/jquery.js"><\/script>')</script>	 
+        <script>window.jQuery || document.write('<script src="bower/jquery/dist/jquery.js"><\/script>')</script>
+         <script src="js/jquery.placeholder.min.js"></script>
+        <script src="js/placeholder-fix.js"></script>	 
         <script src='https://www.google.com/recaptcha/api.js'></script>
          <script src="http://cdn.jsdelivr.net/qtip2/2.2.1/jquery.qtip.min.js"></script>  
         <script src="js/validate-support.js"></script>
