--- a/app/works.html
+++ b/app/works.html
@@ -154,9 +154,10 @@
 </div>   
 
        <script src="http://code.jquery.com/jquery-1.6.2.min.js"></script> 
-       <script src="https://raw.githubusercontent.com/hazzik/livequery/master/dist/jquery.livequery.min.js"></script>
+
         <script src="js/jquery.simplemodal-1.4.4.js"></script>
         <script src="js/modal-box.js"></script>
+         <script src="js/jquery.placeholder.min.js"></script>
         <script src="http://cdn.jsdelivr.net/qtip2/2.2.1/jquery.qtip.min.js"></script>   
         <script src="js/validate-modal.js"></script>
 </body>
