--- a/app/login.html
+++ b/app/login.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-  <!--[if lt IE 7]> <html class="no-js ie lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-  <!--[if IE 7]> <html class="no-js ie lt-ie9 lt-ie8"> <![endif]-->
-  <!--[if IE 8]> <html class="no-js ie lt-ie9"> <![endif]-->
-  <!--[if IE 9]> <html class="no-js ie lt-ie10"> <![endif]-->
 <html lang="ru-Ru">
 <head>
 	<meta charset="UTF-8">
@@ -16,11 +12,15 @@
 <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/qtip2/2.2.1/jquery.qtip.min.css" />
 <link rel="stylesheet" type="text/css" href="css/login.css" />
 <script src="bower/modernizr/modernizr.js"></script>
+<!--[if IE 8]>
+<style>
+  .psw-input {
+    font-family: Arial;
+  }
+</style>
+<![endif]-->
 </head>
 <body>
-	<!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
 
      <div class="wrapper">
 
@@ -31,7 +31,7 @@
         <div class="head-foot"></div>
       	</div>
       	<div class="auth-box">
-      		<form action="" class="auth-from">
+      		<form action="" class="auth-from" id='form'>
       			<label for="login" class="login-label">Логин</label>
       			<input id="login" type="text" placeholder="Введите логин" class="login-input">
       			<label for="pswd" class="psw-label">Пароль</label>
@@ -53,6 +53,8 @@
 
 	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="bower/jquery/dist/jquery.js"><\/script>')</script>
+        <script src="js/jquery.placeholder.min.js"></script>
+        <script src="js/placeholder-fix.js"></script>
         <script src="http://cdn.jsdelivr.net/qtip2/2.2.1/jquery.qtip.min.js"></script>	 
         <script src="js/validate-login.js"></script>
 </body>
