--- a/app/login.html
+++ b/app/login.html
@@ -9,15 +9,11 @@
 <link rel="stylesheet" type="text/css" href="fonts/fira/fira.css" />
 <link rel="icon" href="/image/favicon.ico" type="image/x-icon" /> 
 <link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon" />
-<link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/qtip2/2.2.1/jquery.qtip.min.css" />
+<link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.2.1/jquery.qtip.min.css" />
 <link rel="stylesheet" type="text/css" href="css/login.css" />
 <script src="bower/modernizr/modernizr.js"></script>
 <!--[if IE 8]>
-<style>
-  .psw-input {
-    font-family: Arial;
-  }
-</style>
+<link rel="stylesheet" type="text/css" href="css/ie8fix.css">
 <![endif]-->
 </head>
 <body>
@@ -31,12 +27,13 @@
         <div class="head-foot"></div>
       	</div>
       	<div class="auth-box">
-      		<form action="" class="auth-from" id='form'>
+      		<form action="auth.php" method='post' class="auth-from" id='form'>
       			<label for="login" class="login-label">Логин</label>
-      			<input id="login" type="text" placeholder="Введите логин" class="login-input">
+      			<input id="login" type="text" placeholder="Введите логин" class="login-input" />
       			<label for="pswd" class="psw-label">Пароль</label>
-      			<input id="pswd" type="password" placeholder="Введите пароль" class="psw-input">
-      			<input type="submit" value="Войти" class="submit-btn">
+            <input id='fix' type='text' class='input-fix' value='Введите пароль'>
+      			<input id="pswd" type="password" placeholder="Введите пароль" class="psw-input" />
+      			<button type="submit" class="submit-btn">Войти</button>
       		</form>
       	</div>
       	</section>
@@ -51,11 +48,9 @@
 	</div>
 </div>   
 
-	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="bower/jquery/dist/jquery.js"><\/script>')</script>
-        <script src="js/jquery.placeholder.min.js"></script>
-        <script src="js/placeholder-fix.js"></script>
-        <script src="http://cdn.jsdelivr.net/qtip2/2.2.1/jquery.qtip.min.js"></script>	 
+	 <script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
+        <script src="http://jamesallardice.github.io/Placeholders.js/assets/js/placeholders.min.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.2.1/jquery.qtip.min.js"></script>	 
         <script src="js/validate-login.js"></script>
 </body>
 </html>
