--- a/app/support.html
+++ b/app/support.html
@@ -16,6 +16,9 @@
 <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/qtip2/2.2.1/jquery.qtip.min.css" />
 <link rel="stylesheet" type="text/css" href="css/support.css">
 <script src="bower/modernizr/modernizr.js"></script>
+<!--[if IE 8]>
+<link rel="stylesheet" type="text/css" href="css/ie8fix.css">
+<![endif]-->
 </head>
 <body>
 	<!--[if lt IE 8]>
@@ -58,7 +61,7 @@
                 </li>
                  <div class="nav-item-line"></div>
             	<li class="nav-item">
-            		<a  href="works.html" class="nav-link nav-link-2">Мои работы</span>
+            		<a  href="works.html" class="nav-link-2">Мои работы</a>
             	</li>
             	<li class="main-nav-head">
             		<a href="#" class="nav-active">Связаться со мной</a>
@@ -123,8 +126,7 @@
 
        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="bower/jquery/dist/jquery.js"><\/script>')</script>
-         <script src="js/jquery.placeholder.min.js"></script>
-        <script src="js/placeholder-fix.js"></script>	 
+   <script src="http://jamesallardice.github.io/Placeholders.js/assets/js/placeholders.min.js"></script>
         <script src='https://www.google.com/recaptcha/api.js'></script>
          <script src="http://cdn.jsdelivr.net/qtip2/2.2.1/jquery.qtip.min.js"></script>  
         <script src="js/validate-support.js"></script>
