--- a/app/works.html
+++ b/app/works.html
@@ -16,6 +16,9 @@
 <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/qtip2/2.2.1/jquery.qtip.min.css" />
 <link rel="stylesheet" type="text/css" href="css/works.css">
 <script src="bower/modernizr/modernizr.js"></script>
+<!--[if IE 8]>
+<link rel="stylesheet" type="text/css" href="css/ie8fix.css">
+<![endif]-->
 </head>
 <body>
         <div class="wrapper">
