--- a/app/support.html
+++ b/app/support.html
@@ -104,7 +104,7 @@
              <input type="email" class="email-input" id="email" placeholder="Куда мне писать" name='address'>
              <label for="msg" class="msg-label">Сообщение</label>
              <textarea id="msg" cols="30" rows="10" class="msg-text" placeholder="Кратко в чем суть" name='message'></textarea>
-             <div class="g-recaptcha" id="recaptcha" name="g-recaptcha-response" data-sitekey="6LdzJQgTAAAAAKrfvylxt8q1vM-xVdgH7eEn09Jk">Введите код, указанный на картинке</div>
+             <div class="g-recaptcha" data-sitekey="6LcRnAgTAAAAAMEJlJ6AMpYfRfajRCBAroWiolLO">Подтвердите капчу</div>
              <input type="submit" value="Отправить" class="form-submit">
              <button type="reset" class="reset-btn">Очистить</button>
            </form>
@@ -130,5 +130,6 @@
         <script src='https://www.google.com/recaptcha/api.js'></script>
          <script src="http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.2.1/jquery.qtip.min.js"></script>  
         <script src="js/validate-support.js"></script>
+        <script src="js/muodule-js.js"></script>
 </body>
 </html>
