--- a/app/support.html
+++ b/app/support.html
@@ -130,6 +130,6 @@
         <script src='https://www.google.com/recaptcha/api.js'></script>
          <script src="http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.2.1/jquery.qtip.min.js"></script>  
         <script src="js/validate-support.js"></script>
-        <script src="js/muodule-js.js"></script>
+        <script src="js/error-box.js"></script>
 </body>
 </html>
